기본적인 틀을 만들었어요

--- a/views/setup/index.ejs
+++ b/views/setup/index.ejs
@@ -7,7 +7,11 @@
 <body>
 <h1>Maki Engine 설치 페이지</h1>
 <form action="dbinfo" method="post">
-
+	<input type="text" name="host" placeholder="SQL 주소">
+	<input type="text" name="id" placeholder="SQL 아이디">
+	<input type="password" name="pw" placeholder="SQL 비밀번호">
+	<input type="text" name="db" placeholder="데이터베이스 이름">
+	<input type="text" name="prefix" placeholder="테이블 접미사" value="maki_">
 </form>
 </body>
 </html>
